<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="ST_PosData" Id="{e21f38e9-eae7-43cf-87ab-c987afe9c483}">
    <Declaration><![CDATA[TYPE ST_PosData :
STRUCT
	nState				:UDINT;
	nStateLast			:UDINT;
	sState				:STRING;
	bBusy				:BOOL;
	bReady				:BOOL;
	bPass				:BOOL;
	bFail				:BOOL;
	bError				:BOOL;
	nErrorCode			:UDINT;
	nCycleTime			:REAL;
	bManualModeEnable	:BOOL;
	bDoorOpenEnable		:BOOL;
	stProductData		:ST_ProductData;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>